<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WunderGarten</string>
    
    <string name="title_plant_detail">Detail</string>
    <string name="plants_list">Plants list</string>
    <string name="plant">Plant</string>
    
    <string name="mygarden_list">Plants in my garden</string>
    <string name="my_garden">My garden</string>
    <string name="mygarden">My garden</string>
    <string name="todo">Todo</string>
    <string name="todos">Todo</string>
    <string name="todos_list">My todos</string>
    <string name="todo_action">Todo action</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="remove">Remove</string>
    <string name="type_to_filter">type to filter</string>
    
    <!--  Menu items -->
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Activity settings</string>
    
    <string name="wifi_connected">Connected to WIFI</string>
    <string name="lost_connection">Connection lost</string>
    <string name="page_title">All items</string>
    <string name="updated">Last updated:</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="connect_to_mijntuin">Connect to Mijntuin</string>
    <string name="default_text">No text</string>
    <string name="no_items">No items</string>
    
    <string name="evergreen">Evergreen</string>
    <string name="humidity">Humidity</string>
    <string name="winterhard">Winterhard</string>
    <string name="ph">PH</string>
    <string name="light">Light</string>
    <string name="plant_period">Plant period</string>
    <string name="harvest_on">Harvest period</string>
    <string name="frequency">Frequency</string>
    

</resources>