<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp" >
	
	    <TextView
	        android:id="@+id/plant_detail"
	        style="?android:attr/textAppearanceLarge"
	           android:textSize="14sp"
	           android:textStyle="bold"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	        tools:context=".PlantDetailFragment" />
	
	    <ImageView
	        android:id="@+id/plantImage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/plant" />
	
	    <TextView
	        android:id="@+id/plantWinterhard"
	        tools:context=".PlantDetailFragment"
	        android:textSize="12sp"
	        android:textStyle="bold"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	        android:contentDescription="@string/winterhard"
	         />
	    <TextView
	        android:id="@+id/plantHumidity"
	        tools:context=".PlantDetailFragment"
	        android:textSize="12sp"
	        android:textStyle="bold"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	        android:contentDescription="@string/humidity"
	         />
	    <TextView
	        android:id="@+id/plantPH"
	        tools:context=".PlantDetailFragment"
	        android:textSize="12sp"
	        android:textStyle="bold"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	        android:contentDescription="@string/ph"
	         />
	    <TextView
	        android:id="@+id/plantEvergreen"
	        tools:context=".PlantDetailFragment"
	        android:textSize="12sp"
	        android:textStyle="bold"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	        android:contentDescription="@string/evergreen"
	         />
	    <TextView
	        android:id="@+id/plantLight"
	        tools:context=".PlantDetailFragment"
	        android:textSize="12sp"
	        android:textStyle="bold"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	        android:contentDescription="@string/light"
	         />
	
	    <TextView
	        android:id="@+id/plant_detail_desc"
	        android:textSize="12sp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp"
	       	android:textIsSelectable="false"
	       	tools:context=".PlantDetailFragment" />
	
	</LinearLayout>
</ScrollView>